--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#1f1f1f" />
         <meta name="title" content="Mantis React Dashboard | Open Source Admin Template" />
@@ -18,6 +18,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>CORAL</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"></link>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
